# umdk

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.ch.md  README.en.md  README.md  README_zh.md  RELEASE-NOTES.ch.md  RELEASE-NOTES.md  cmake_uninstall.cmake.in  umdk.spec  urma.spec
common/: CMakeLists.txt  README.md  ub_bitmap.c  ub_dstring.c  ub_get_clock.c  ub_hash.c  ub_hmap.c  ub_perf_cycle.c  ub_shash.c  ub_smap.c  ub_util.c
hw/hns3/: CMakeLists.txt  hns3_udma_abi.h  hns3_udma_u_abi.h  hns3_udma_u_buf.c  hns3_udma_u_buf.h  hns3_udma_u_common.c  hns3_udma_u_common.h  hns3_udma_u_db.c  hns3_udma_u_db.h  hns3_udma_u_jetty.c  hns3_udma_u_jetty.h  hns3_udma_u_jfc.c  hns3_udma_u_jfc.h  hns3_udma_u_jfr.c  hns3_udma_u_jfr.h  hns3_udma_u_jfs.c  hns3_udma_u_jfs.h  hns3_udma_u_log.c  hns3_udma_u_log.h  hns3_udma_u_main.c  hns3_udma_u_poe.h  hns3_udma_u_provider_ops.c  hns3_udma_u_provider_ops.h  hns3_udma_u_segment.c  hns3_udma_u_segment.h  hns3_udma_u_tp.c  hns3_udma_u_tp.h  hns3_udma_u_user_ctl.c  hns3_udma_u_user_ctl.h  hns3_udma_u_user_ctl_api.h
include/: CMakeLists.txt  release-notes.txt  ub_errno.h  urma_api.h  urma_ex_api.h  urma_opcode.h  urma_types.h  urma_types_str.h
include/common/: CMakeLists.txt  README.md  compiler.h  ub_barrier.h  ub_bitmap.h  ub_dstring.h  ub_get_clock.h  ub_hash.h  ub_hmap.h  ub_list.h  ub_perf_cycle.h  ub_shash.h  ub_smap.h  ub_util.h  urma_cmd.h
lib/urma/core/: CMakeLists.txt  urma_cmd.c  urma_cp_api.c  urma_device.c  urma_dp_api.c  urma_format_convert.c  urma_log.c  urma_main.c
src/: CMakeLists.txt
src/aigw/: Cargo.toml  README.md  aigw.spec  build.sh  go.mod  go.sum
src/aigw/configs/: aigw_json.txt
src/aigw/example/: CMakeLists.txt  ttft_pretrain.txt
src/aigw/include/: aigw.h
src/aigw/open_source/: CMakeLists.txt
src/aigw/output/: output.md
src/aigw/src/: lib.rs  libaigw.go
src/cam/: README.md
src/cam/comm_operator/: CMakeLists.txt  cam_api.cpp
src/cam/examples/: a2e_e2a_sample.py  fused_deep_moe_sample.py  fused_deep_moe_sample_w4A8.py  fused_deep_moe_shmem_sample.py  moe_dispatch_combine_prefill_a2_sample.py  moe_dispatch_combine_prefill_sample.py  moe_dispatch_combine_shmem_sample.py  moe_distribute_sample.py  run_a2_internode.sh  shmem_dispatch_combine_sample.py  utils.py
src/snc/: pom.xml
src/ulock/dlock/: CMakeLists.txt
src/urma/: .bazelrc  BUILD.bazel  CMakeLists.txt  WORKSPACE  urma_bazel.sh
src/urma/bazel/: BUILD.bazel  libummu.BUILD.bazel  libummu_repo.bzl  urma_deps.bzl  urma_shared.bzl
src/urma/common/: ub_get_clock.c  ub_perf_cycle.c  ub_util.c
src/urma/examples/: README.md  urma_sample.c
src/urma/tools/: CMakeLists.txt
src/urpc/: .bazelrc  BUILD.bazel  CMakeLists.txt  MODULE.bazel  WORKSPACE  cmake_uninstall.cmake.in
src/urpc/bazel/: build_settings.bzl  copts.bzl
src/urpc/config/: umq.conf  urpc_framework.conf
src/urpc/framework/: CMakeLists.txt  urpc_lib_log.c  urpc_lib_log.h
src/urpc/include/: BUILD.bazel  CMakeLists.txt
src/urpc/tools/: CMakeLists.txt
src/urpc/umq/: BUILD.bazel  CMakeLists.txt  msg_ring.c  msg_ring.h  umq_api.c  umq_dfx_api.c  umq_inner.h  umq_pro_api.c  umq_thread_local.c  umq_thread_local.h  umq_vlog.c  umq_vlog.h  util_id_generator.c  util_id_generator.h
src/urpc/util/: BUILD.bazel  CMakeLists.txt  urpc_bitmap.c  urpc_bitmap.h  urpc_cmd_queue.c  urpc_cmd_queue.h  urpc_dbuf_stat.c  urpc_dbuf_stat.h  urpc_epoll.c  urpc_epoll.h  urpc_hash.h  urpc_hmap.c  urpc_hmap.h  urpc_id_generator.c  urpc_id_generator.h  urpc_list.h  urpc_manage.c  urpc_manage.h  urpc_pool.c  urpc_pool.h  urpc_slab.c  urpc_slab.h  urpc_slist.h  urpc_socket.c  urpc_socket.h  urpc_thread.c  urpc_thread.h  urpc_thread_closure.cpp  urpc_thread_closure.h  urpc_timer.c  urpc_timer.h  urpc_tlv.c  urpc_tlv.h  urpc_util.c  urpc_util.h  util_lock.c  util_lock.h  util_log.c  util_log.h  util_thread_key.c  (+3 more)
src/usock/ums/: CMakeLists.txt
test/urma/: CMakeLists.txt  SKILL.md
test/urma/bond/: CMakeLists.txt  bond_fixture.h  bond_test.cpp  bondp_topo_info_gtest.cpp  context_worker_topo_test.cpp  datapath_convert_schedule_test.cpp  datapath_public_test.cpp  public_api_test.cpp  segment_provider_health_test.cpp  wr_slide_test.cpp  wr_slide_timewheel_test.cpp
test/urma/cmd_tlv/: CMakeLists.txt  attr_layout_test.cpp  cmd_tlv_mock.cpp  cmd_tlv_test.cpp  high_level_cmd_test.cpp  wrapper_header_test.cpp
test/urma/common/: CMakeLists.txt  common_mock.cpp  common_test.cpp  dstring_test.cpp  util_clock_test.cpp
test/urma/core/: CMakeLists.txt  cmd_wrapper_test.cpp  core_fixture.h  core_mock.cpp  core_test.cpp  (+2 more)
test/urpc/: CMakeLists.txt  umdk_urpc_ut.sh
tools/urma_admin/: CMakeLists.txt  admin_cmd.c  admin_cmd.h  admin_file_ops.c  admin_file_ops.h  admin_netlink.c  admin_netlink.h  admin_parameters.c  admin_parameters.h  urma_admin.c  urma_admin_log.c  urma_admin_log.h
tools/urma_perftest/: CMakeLists.txt  perftest_communication.c  perftest_communication.h  perftest_parameters.c  perftest_parameters.h  perftest_resources.c  perftest_resources.h  perftest_run_test.c  perftest_run_test.h  urma_perftest.c
tools/urma_tp_test/: CMakeLists.txt  run_test.c  run_test.h  tp_test_comm.c  tp_test_comm.h  tp_test_para.c  tp_test_para.h  tp_test_res.c  tp_test_res.h  urma_tp_test.c
tools/uvs_admin/: CMakeLists.txt  uvs_admin.c  uvs_admin.h  uvs_admin_cmd.c  uvs_admin_cmd.h  uvs_admin_cmd_client.c  uvs_admin_cmd_client.h  uvs_admin_cmd_trace.c  uvs_admin_cmd_trace.h  uvs_admin_cmd_util.c  uvs_admin_cmd_util.h  uvs_admin_log.c  uvs_admin_log.h  uvs_admin_rootcmd.c  uvs_admin_rootcmd.h  uvs_admin_types.h
transport_service/: CMakeLists.txt
transport_service/config/: CMakeLists.txt  tpsa  tpsa.conf  tpsa.ini  uvsd.service
transport_service/core/: CMakeLists.txt  tpsa_config.c  tpsa_daemon.c  tpsa_ini.c  tpsa_log.c  tpsa_net.c  tpsa_nl.c  tpsa_sock.c  tpsa_worker.c
transport_service/daemon/: CMakeLists.txt  tpsa_config.c  tpsa_daemon.c  tpsa_ini.c  tpsa_service.c
transport_service/include/: tpsa_config.h  tpsa_ini.h  tpsa_log.h  tpsa_nl.h  tpsa_sock.h  tpsa_worker.h
(+1432 files in other folders)
