package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("//bazel:urma_shared.bzl", "urma_dynamic_linkopts", "urma_linklib_inputs", "urma_shared_library", "urma_shared_library_static_dep")

config_setting(
    name = "perf_cycle_enabled",
    values = {"define": "perf_cycle=true"},
)

config_setting(
    name = "build_udma_enabled",
    values = {"define": "build_udma=true"},
)

URMA_COMMON_SRCS = glob(
    ["common/*.c"],
    exclude = ["common/ub_perf_cycle.c"],
) + select({
    ":perf_cycle_enabled": ["common/ub_perf_cycle.c"],
    "//conditions:default": [],
})

URMA_COMMON_LINKOPTS = ["-ldl", "-lrt"] + select({
    ":perf_cycle_enabled": ["-lm"],
    "//conditions:default": [],
})

cc_library(
    name = "urma_common_headers",
    hdrs = glob(["common/include/**/*.h"]),
    includes = ["common/include"],
)

urma_shared_library(
    name = "urma_common",
    srcs = URMA_COMMON_SRCS,
    hdrs = glob(["common/include/**/*.h"]),
    includes = ["common/include"],
    copts = ["-std=gnu99"],
    linkopts = URMA_COMMON_LINKOPTS,
)

cc_library(
    name = "urma_headers",
    hdrs = glob([
        "lib/urma/core/include/**/*.h",
        "lib/urma/core/*.h",
    ]),
    includes = [
        "common/include",
        "lib/urma/core",
        "lib/urma/core/include",
    ],
    deps = [":urma_common_headers"],
)

urma_shared_library(
    name = "urma",
    srcs = glob(["lib/urma/core/*.c"]),
    hdrs = glob([
        "lib/urma/core/include/**/*.h",
        "lib/urma/core/*.h",
    ]),
    includes = [
        "common/include",
        "lib/urma/core",
        "lib/urma/core/include",
    ],
    copts = ["-std=gnu99"],
    compile_deps = [":urma_common_headers"],
    dynamic_lib_names = ["urma_common"],
    linkopts = ["-ldl", "-lrt"],
)

urma_shared_library(
    name = "urma_ubagg",
    srcs = glob([
        "lib/urma/bond/*.c",
        "lib/urma/bond/utils/*.c",
    ]),
    hdrs = glob(["lib/urma/bond/**/*.h"]),
    includes = [
        "common/include",
        "lib/urma/bond",
        "lib/urma/bond/include",
        "lib/urma/bond/utils",
    ],
    copts = [
        "-std=gnu99",
        "-I/usr/include/libnl3",
    ],
    compile_deps = [
        ":urma_common_headers",
        ":urma_headers",
    ],
    dynamic_lib_names = ["urma"],
    linkopts = ["-lnl-genl-3", "-lnl-3"],
)

urma_shared_library_static_dep(
    name = "tpsa",
    srcs = glob(["lib/uvs/core/*.c"]),
    hdrs = glob([
        "lib/uvs/core/include/**/*.h",
        "lib/uvs/core/*.h",
    ]),
    includes = [
        "common/include",
        "lib/urma/core/include",
        "lib/uvs/core",
        "lib/uvs/core/include",
    ],
    copts = [
        "-std=gnu99",
        "-I/usr/include/libnl3",
    ],
    static_deps = [
        ":urma_common_internal",
        ":urma_headers",
    ],
    # No -lssl/-lcrypto: avoid DT_NEEDED on libssl.so.1.1 (OpenSSL 3-only targets).
    linkopts = [
        "-lnl-genl-3",
        "-lnl-3",
        "-lz",
    ],
)

cc_library(
    name = "uvs",
    deps = [":tpsa"],
)

alias(
    name = "uvs_tpsa",
    actual = ":tpsa",
)

_UMMU_LINKLIB_DIR = "-L$(GENDIR)/external/libummu/linklib"

cc_library(
    name = "urma_udma_internal",
    srcs = select({
        ":build_udma_enabled": glob(["hw/udma/*.c"]),
        "//conditions:default": [],
    }),
    hdrs = glob([
        "hw/udma/*.h",
        "hw/udma/include/**/*.h",
        "hw/udma/kernel_headers/**/*.h",
    ]),
    includes = [
        "hw/udma",
        "hw/udma/include",
        "hw/udma/kernel_headers",
        "lib/urma/core",
        "lib/urma/core/include",
    ],
    copts = ["-std=gnu99"],
    deps = select({
        ":build_udma_enabled": [
            ":urma_common_headers",
            ":urma_headers",
            "@libummu//:ummu_api",
        ],
        "//conditions:default": [
            ":urma_common_headers",
            ":urma_headers",
        ],
    }),
    linkstatic = True,
    alwayslink = True,
)

cc_binary(
    name = "urma-udma",
    linkshared = True,
    deps = [":urma_udma_internal"],
    additional_linker_inputs = select({
        ":build_udma_enabled": urma_linklib_inputs(["urma", "urma_common"]) + [
            "@libummu//:ummu_linklib",
        ],
        "//conditions:default": [],
    }),
    linkopts = select({
        ":build_udma_enabled": urma_dynamic_linkopts(
            ["urma", "urma_common"],
            extra_dirs = [_UMMU_LINKLIB_DIR],
            extra_libs = ["-lummu"],
        ),
        "//conditions:default": [],
    }),
)

genrule(
    name = "urma-udma_linklib",
    srcs = [":urma-udma"],
    outs = ["linklib/liburma-udma.so"],
    cmd = "mkdir -p $(@D) && cp $(location :urma-udma) $@",
)

alias(
    name = "hw_udma",
    actual = ":urma-udma",
)
