# SPDX-License-Identifier: MIT
# Copyright (c) Huawei Technologies Co., Ltd. 2026-2026. All rights reserved.

module(
    name = "urpc",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.2.10")
bazel_dep(name = "rules_foreign_cc", version = "0.14.0")
bazel_dep(name = "rules_perl", version = "0.4.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = 'zlib', version = '1.3.1.bcr.5', repo_name = 'com_github_madler_zlib')

bazel_dep(name = 'openssl', version = '3.3.2')
single_version_override(
    module_name = "openssl",
    version = "3.3.2.bcr.1",
    registry = "https://raw.githubusercontent.com/secretflow/bazel-registry/main",
)

register_toolchains("@rules_cc//cc:all")
register_toolchains("@rules_foreign_cc//foreign_cc:all")
register_toolchains("@rules_perl//perl:all")